objects/Project__c.object
<CustomObject>
    <description>Use this object to create Project per account to keep track of the amount of time spent on a certain tasks.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates weather a Project is Active or not</description>
        <inlineHelpText>Is the Project Active?</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billable_Rate__c</fullName>
        <defaultValue>250</defaultValue>
        <description>Hourly rate of billing</description>
        <inlineHelpText>Per hour bill rate</inlineHelpText>
        <label>Billable Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Dollar__c</fullName>
        <formula>PS__c * Billable_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Auto calculated as Allocated PS hours * Billable rate ($250 per Hr)</inlineHelpText>
        <label>Budget ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Unused__c</fullName>
        <description>Remaining budget hours</description>
        <formula>PS__c  -  Hours_billed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Remaining hours</inlineHelpText>
        <label>PS Unused (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <description>Budget allocated to the Project/Task</description>
        <inlineHelpText>Enter the budget allocated to the Project/Task.</inlineHelpText>
        <label>Budget</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_in_Hrs__c</fullName>
        <inlineHelpText>Enter the number of PS hours assigned to this Project</inlineHelpText>
        <label>Budget (in Hrs)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary SPOC of the Account against whom this Project/Task is being billed</description>
        <inlineHelpText>Primary SPOC</inlineHelpText>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer against whom this Project is being billed.</description>
        <inlineHelpText>Account to which the Project/Task is allocated.</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Professional Services</relationshipLabel>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Evaluation_End_Date__c</fullName>
        <formula>Opportunity__r.Evaluation_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Evaluation_Start_Date__c</fullName>
        <formula>Opportunity__r.Evaluation_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Evaluation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours_billed__c</fullName>
        <description>Total hours excluding &quot;No Charge&quot;</description>
        <inlineHelpText>The number of billable working hours - time entries that are marked &quot;no charge&quot; are excluded</inlineHelpText>
        <label>Hours Billed</label>
        <summarizedField>TimeLog__c.Duration__c</summarizedField>
        <summaryFilterItems>
            <field>TimeLog__c.No_Charge__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>TimeLog__c.Related_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Professional Services</relationshipLabel>
        <relationshipName>Professional_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No_of_Subscriptions__c</fullName>
        <formula>Opportunity__r.No_of_Subscriptions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No of Subscriptions</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Contact_Name__c</fullName>
        <formula>Opportunity__r.Contact_Name__r.Contact_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Oppty, if any?</inlineHelpText>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Customer__c</field>
                <operation>equals</operation>
                <valueField>Opportunity.Account.Id</valueField>
            </filterItems>
            <infoMessage>Please choose the relavent Opportunity</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Project</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PS__c</fullName>
        <formula>Opportunity__r.PS_Hrs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is pulled from the PS hours field in Opportunity</inlineHelpText>
        <label>Allocated PS Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PS_item__c</fullName>
        <label>PS Item</label>
        <picklist>
            <picklistValues>
                <fullName>Turn Key Continuous Delivery Set up with AutoRABIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Professional Services - Annual Packs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite AutoRABIT Customer Success Engineer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite AutoRABIT Customer Success Architect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PreSales Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS Core</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Engg__c</fullName>
        <formula>Opportunity__r.Pre_SalesEngineer__r.FirstName+&quot; &quot;+Opportunity__r.Pre_SalesEngineer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pre-Sales Engg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <description>Revenue generated from this project so far (excluding &quot;No Charge&quot;)</description>
        <formula>Hours_billed__c * Billable_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue generated till now.</inlineHelpText>
        <label>Revenue Generated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Size__c</fullName>
        <formula>Opportunity__r.Team_Size__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Size</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours_Spent__c</fullName>
        <description>Total number of hours spent on the Project</description>
        <inlineHelpText>Total hours spent</inlineHelpText>
        <label>Total Hours Spent</label>
        <summarizedField>TimeLog__c.Duration__c</summarizedField>
        <summaryForeignKey>TimeLog__c.Related_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Professional Service</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PS - {0000000}</displayFormat>
        <label>PS Item#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Professional Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>